Fix: added overflow-x in hero

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1,9 +1,7 @@
 @import 'bootstrap/scss/bootstrap';
 @import '@fortawesome/fontawesome-free';
 
-body {
-    overflow-x: hidden;
-}
+
 
 img{
     max-width: 100%;
